# src/server.ts
@@ -23,6 +23,7 @@ server.register(import('./routes/filetree'), { prefix: '/projects/:projectId/fil
 server.register(import('./routes/files'), { prefix: '/projects/:projectId/files' });
 server.register(import('./routes/bash'), { prefix: '/projects/:projectId/bash' });
 server.register(import('./routes/docker'), { prefix: '/projects/:projectId/docker' });
+server.register(import('./routes/search'), { prefix: '/projects/:projectId/search' });
 
 
 // Serve openapi.json at /openapi
